# grep-with-marketing

./: CMakeLists.txt  README.md  README.txt  cloudservice.c  license.txt  main.c
src/: CMakeLists.txt  cloudservice.h  grep.c  grep.h
surgery/: CMakeLists.txt  errors.txt  grep.c  grep.h  main.cpp  patient.c  patient.h  stubs.c  stubs.cpp  stubs.h  unit_test.Grep.two_lines_of_input.find_nothing.approved.txt  unit_test.Grep.two_lines_of_input.find_on_first_line.approved.txt  unit_test.Grep.two_lines_of_input.find_on_second_line.approved.txt  unit_test.cpp  unit_tests.cpp  x-stubs-cpp.cpp
test/: CMakeLists.txt  grep_stubs.c  grep_stubs.h  main.cpp  stubs.c  unit_test.Grep.empty_input.approved.txt  unit_test.cpp
